--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "cordova": {
     "platforms": [
       "browser",
-      "android",
       "ios"
     ],
     "plugins": {
@@ -25,7 +24,7 @@
     }
   },
   "dependencies": {
-    "cordova-android": "^7.0.0",
+    "cordova-android": "7.0.0",
     "cordova-browser": "^5.0.4",
     "cordova-ios": "^4.5.5",
     "cordova-plugin-browsertab": "^0.2.0",
